Resolves: fdo#75229 missing object:state-changed:focused

in multiline edits, focus remains stuck on internal
TextWindow instead of being placed on container MultiLineEdit

regression from b755fb8c0f6b1282f62c12f378c0a5ecac64d490 which
removed it with no explanation

Change-Id: I9d6bd546e341651442538bf40de6c43c521868d7